{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 33,
  "lineage": "a0ef3450-5ae9-8a7c-a0de-9610ebdce1e8",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-IP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ad0512e52b4f80ae",
            "arn": "arn:aws:ec2:us-west-2:495599771332:elastic-ip/eipalloc-0ad0512e52b4f80ae",
            "domain": "vpc",
            "id": "eipalloc-0ad0512e52b4f80ae",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-184-124-115.us-west-2.compute.amazonaws.com",
            "public_ip": "54.184.124.115",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495599771332:internet-gateway/igw-06280eb0130103658",
            "id": "igw-06280eb0130103658",
            "owner_id": "495599771332",
            "region": "us-west-2",
            "tags": {
              "Name": "dev-IGW"
            },
            "tags_all": {
              "Name": "dev-IGW"
            },
            "vpc_id": "vpc-0374bd57c22e730b3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_vpc.eks-terraform-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vpc-aws_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ad0512e52b4f80ae",
            "association_id": "eipassoc-024ceec3ba74e85ba",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0fd76aef95a893628",
            "network_interface_id": "eni-04ba880493c1a3ccf",
            "private_ip": "10.0.8.117",
            "public_ip": "54.184.124.115",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-085f05c7959abe4d0",
            "tags": {
              "Name": "dev-NAT-GW"
            },
            "tags_all": {
              "Name": "dev-NAT-GW"
            },
            "vpc_id": "vpc-0374bd57c22e730b3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_eip.nat-IP",
            "module.eks.aws_internet_gateway.Igw",
            "module.eks.aws_subnet.public",
            "module.eks.aws_vpc.eks-terraform-vpc",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495599771332:route-table/rtb-0f96bb2a6152c249e",
            "id": "rtb-0f96bb2a6152c249e",
            "owner_id": "495599771332",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fd76aef95a893628",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-route"
            },
            "tags_all": {
              "Name": "dev-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0374bd57c22e730b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "495599771332",
            "id": "rtb-0f96bb2a6152c249e",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.eks.aws_eip.nat-IP",
            "module.eks.aws_internet_gateway.Igw",
            "module.eks.aws_nat_gateway.vpc-aws_nat_gateway",
            "module.eks.aws_subnet.public",
            "module.eks.aws_vpc.eks-terraform-vpc",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495599771332:route-table/rtb-038026f566cf9f892",
            "id": "rtb-038026f566cf9f892",
            "owner_id": "495599771332",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06280eb0130103658",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-route"
            },
            "tags_all": {
              "Name": "dev-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0374bd57c22e730b3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "495599771332",
            "id": "rtb-038026f566cf9f892",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.eks.aws_internet_gateway.Igw",
            "module.eks.aws_vpc.eks-terraform-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d93b035a37806bd0",
            "region": "us-west-2",
            "route_table_id": "rtb-0f96bb2a6152c249e",
            "subnet_id": "subnet-07289b1ff4777e2ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_eip.nat-IP",
            "module.eks.aws_internet_gateway.Igw",
            "module.eks.aws_nat_gateway.vpc-aws_nat_gateway",
            "module.eks.aws_route_table.private",
            "module.eks.aws_subnet.private",
            "module.eks.aws_subnet.public",
            "module.eks.aws_vpc.eks-terraform-vpc",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072968a0a1826c2e2",
            "region": "us-west-2",
            "route_table_id": "rtb-0f96bb2a6152c249e",
            "subnet_id": "subnet-0d6ad1ecbf0e21977"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_eip.nat-IP",
            "module.eks.aws_internet_gateway.Igw",
            "module.eks.aws_nat_gateway.vpc-aws_nat_gateway",
            "module.eks.aws_route_table.private",
            "module.eks.aws_subnet.private",
            "module.eks.aws_subnet.public",
            "module.eks.aws_vpc.eks-terraform-vpc",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03182c3428d8e03ed",
            "region": "us-west-2",
            "route_table_id": "rtb-0f96bb2a6152c249e",
            "subnet_id": "subnet-0734c5d43a59a7cf8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_eip.nat-IP",
            "module.eks.aws_internet_gateway.Igw",
            "module.eks.aws_nat_gateway.vpc-aws_nat_gateway",
            "module.eks.aws_route_table.private",
            "module.eks.aws_subnet.private",
            "module.eks.aws_subnet.public",
            "module.eks.aws_vpc.eks-terraform-vpc",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7d774fd9a8fbd46",
            "region": "us-west-2",
            "route_table_id": "rtb-0f96bb2a6152c249e",
            "subnet_id": "subnet-0d28610b885482c08"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_eip.nat-IP",
            "module.eks.aws_internet_gateway.Igw",
            "module.eks.aws_nat_gateway.vpc-aws_nat_gateway",
            "module.eks.aws_route_table.private",
            "module.eks.aws_subnet.private",
            "module.eks.aws_subnet.public",
            "module.eks.aws_vpc.eks-terraform-vpc",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8b682ad27f987de",
            "region": "us-west-2",
            "route_table_id": "rtb-038026f566cf9f892",
            "subnet_id": "subnet-085f05c7959abe4d0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_internet_gateway.Igw",
            "module.eks.aws_route_table.public",
            "module.eks.aws_subnet.public",
            "module.eks.aws_vpc.eks-terraform-vpc",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075ce9dc2c00532bf",
            "region": "us-west-2",
            "route_table_id": "rtb-038026f566cf9f892",
            "subnet_id": "subnet-012005950a92448ab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_internet_gateway.Igw",
            "module.eks.aws_route_table.public",
            "module.eks.aws_subnet.public",
            "module.eks.aws_vpc.eks-terraform-vpc",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0121df1a01c3e3836",
            "region": "us-west-2",
            "route_table_id": "rtb-038026f566cf9f892",
            "subnet_id": "subnet-083940450eb5fb82e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_internet_gateway.Igw",
            "module.eks.aws_route_table.public",
            "module.eks.aws_subnet.public",
            "module.eks.aws_vpc.eks-terraform-vpc",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bd9be41c1197249",
            "region": "us-west-2",
            "route_table_id": "rtb-038026f566cf9f892",
            "subnet_id": "subnet-03330f3b7485f7014"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_internet_gateway.Igw",
            "module.eks.aws_route_table.public",
            "module.eks.aws_subnet.public",
            "module.eks.aws_vpc.eks-terraform-vpc",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495599771332:subnet/subnet-07289b1ff4777e2ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07289b1ff4777e2ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599771332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "dev-private",
              "kubernetes.io/cluster/dev-eks-terraform": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dev-private",
              "kubernetes.io/cluster/dev-eks-terraform": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0374bd57c22e730b3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "495599771332",
            "id": "subnet-07289b1ff4777e2ff",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.eks.aws_vpc.eks-terraform-vpc",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495599771332:subnet/subnet-0d6ad1ecbf0e21977",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6ad1ecbf0e21977",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599771332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "dev-private",
              "kubernetes.io/cluster/dev-eks-terraform": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dev-private",
              "kubernetes.io/cluster/dev-eks-terraform": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0374bd57c22e730b3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "495599771332",
            "id": "subnet-0d6ad1ecbf0e21977",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.eks.aws_vpc.eks-terraform-vpc",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495599771332:subnet/subnet-0734c5d43a59a7cf8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.96.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0734c5d43a59a7cf8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599771332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "dev-private",
              "kubernetes.io/cluster/dev-eks-terraform": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dev-private",
              "kubernetes.io/cluster/dev-eks-terraform": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0374bd57c22e730b3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "495599771332",
            "id": "subnet-0734c5d43a59a7cf8",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.eks.aws_vpc.eks-terraform-vpc",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495599771332:subnet/subnet-0d28610b885482c08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.112.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d28610b885482c08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599771332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "dev-private",
              "kubernetes.io/cluster/dev-eks-terraform": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dev-private",
              "kubernetes.io/cluster/dev-eks-terraform": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0374bd57c22e730b3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "495599771332",
            "id": "subnet-0d28610b885482c08",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.eks.aws_vpc.eks-terraform-vpc",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495599771332:subnet/subnet-085f05c7959abe4d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085f05c7959abe4d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495599771332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "dev-public",
              "kubernetes.io/cluster/dev-eks-terraform": "owned",
              "kubernets.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dev-public",
              "kubernetes.io/cluster/dev-eks-terraform": "owned",
              "kubernets.io/role/elb": "1"
            },
            "vpc_id": "vpc-0374bd57c22e730b3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "495599771332",
            "id": "subnet-085f05c7959abe4d0",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.eks.aws_vpc.eks-terraform-vpc",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495599771332:subnet/subnet-012005950a92448ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012005950a92448ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495599771332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "dev-public",
              "kubernetes.io/cluster/dev-eks-terraform": "owned",
              "kubernets.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dev-public",
              "kubernetes.io/cluster/dev-eks-terraform": "owned",
              "kubernets.io/role/elb": "1"
            },
            "vpc_id": "vpc-0374bd57c22e730b3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "495599771332",
            "id": "subnet-012005950a92448ab",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.eks.aws_vpc.eks-terraform-vpc",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495599771332:subnet/subnet-083940450eb5fb82e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083940450eb5fb82e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495599771332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "dev-public",
              "kubernetes.io/cluster/dev-eks-terraform": "owned",
              "kubernets.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dev-public",
              "kubernetes.io/cluster/dev-eks-terraform": "owned",
              "kubernets.io/role/elb": "1"
            },
            "vpc_id": "vpc-0374bd57c22e730b3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "495599771332",
            "id": "subnet-083940450eb5fb82e",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.eks.aws_vpc.eks-terraform-vpc",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495599771332:subnet/subnet-03330f3b7485f7014",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03330f3b7485f7014",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495599771332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "dev-public",
              "kubernetes.io/cluster/dev-eks-terraform": "owned",
              "kubernets.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dev-public",
              "kubernetes.io/cluster/dev-eks-terraform": "owned",
              "kubernets.io/role/elb": "1"
            },
            "vpc_id": "vpc-0374bd57c22e730b3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "495599771332",
            "id": "subnet-03330f3b7485f7014",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.eks.aws_vpc.eks-terraform-vpc",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks-terraform-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:495599771332:vpc/vpc-0374bd57c22e730b3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-080482d8784f5f4d7",
            "default_route_table_id": "rtb-00aa25241b31dde3c",
            "default_security_group_id": "sg-0a0838524c0b505a5",
            "dhcp_options_id": "dopt-02e8cbe36f386f83f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0374bd57c22e730b3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00aa25241b31dde3c",
            "owner_id": "495599771332",
            "region": "us-west-2",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "495599771332",
            "id": "vpc-0374bd57c22e730b3",
            "region": "us-west-2"
          }
        }
      ]
    }
  ]
}